--- a/src/index.html
+++ b/src/index.html
@@ -17,46 +17,48 @@
       </div>
     </form>
 
-    <div><a onclick="clear_marks()" class="next">Clear</a></div>
+    <div>
+      <a id="clear-button" class="next">Clear</a>
+    </div>
     <div>
       <script language="JavaScript" type="text/javascript">
-        let i = -1
-        var pics = [
-          [
-            "url('data/01KEAX20150801_112031_V06_Reflectivity.png')",
-            "url('data/01KAKQ20150801_101421_V06_Rho_HV.png')",
-          ],
-          [
-            "url('data/01KEAX20150801_112031_V06_Reflectivity.png')",
-            "url('data/01KEAX20150801_112031_V06_Reflectivity.png')",
-          ],
-          [
-            "url('data/01KAKQ20150801_101421_V06_Rho_HV.png')",
-            "url('data/01KAKQ20150801_101421_V06_Rho_HV.png')",
-          ],
-        ]
-        console.log(
-          url_exists("url('data/01KEAX20150801_112031_V06_Reflectivity.png')"),
-        )
-        function next_refresh() {
-          if (i < pics.length) {
-            i++
-          }
-          console.log('NEXT:')
-          console.log(i)
-          refresh_page(pics[i])
-        }
-        function prev_refresh() {
-          if (i > 0) {
-            i--
-          }
-          console.log('PREVIOUS:')
-          console.log(i)
-          refresh_page(pics[i])
-        }
+        // let i = -1
+        // var pics = [
+        //   [
+        //     "url('data/01KEAX20150801_112031_V06_Reflectivity.png')",
+        //     "url('data/01KAKQ20150801_101421_V06_Rho_HV.png')",
+        //   ],
+        //   [
+        //     "url('data/01KEAX20150801_112031_V06_Reflectivity.png')",
+        //     "url('data/01KEAX20150801_112031_V06_Reflectivity.png')",
+        //   ],
+        //   [
+        //     "url('data/01KAKQ20150801_101421_V06_Rho_HV.png')",
+        //     "url('data/01KAKQ20150801_101421_V06_Rho_HV.png')",
+        //   ],
+        // ]
+        // console.log(
+        //   url_exists("url('data/01KEAX20150801_112031_V06_Reflectivity.png')"),
+        // )
+        // function next_refresh() {
+        //   if (i < pics.length) {
+        //     i++
+        //   }
+        //   console.log('NEXT:')
+        //   console.log(i)
+        //   refresh_page(pics[i])
+        // }
+        // function prev_refresh() {
+        //   if (i > 0) {
+        //     i--
+        //   }
+        //   console.log('PREVIOUS:')
+        //   console.log(i)
+        //   refresh_page(pics[i])
+        // }
       </script>
-      <a onclick="prev_refresh()" class="previous">&#8249; Previous</a>
-      <a onclick="next_refresh()" class="next">Next &#8250;</a>
+      <a id="prev-button" class="previous">&#8249; Previous</a>
+      <a id="next-button" class="next">Next &#8250;</a>
     </div>
   </body>
 </html>
