--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <title>Get Image coordinates</title>
   </head>
   <body>
+    <button id="open-button" class="next">Choose directory</button>
+    <input
+      id="choose-directory"
+      type="file"
+      style="display: none"
+      webkitdirectory
+    />
     <form name="pointform" method="post">
       <div id="images" style="display: flex; flex-direction:row;">
         <a id="hidden"></a>
