--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <link href="./index.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="./index.css" rel="stylesheet" type="text/css" /> -->
     <title>Get Image coordinates</title>
+    <style>
+      a {
+        text-decoration: none;
+        display: inline-block;
+        padding: 8px 16px;
+        margin-top: 30px;
+      }
+
+      a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      .previous {
+        background-color: #f1f1f1;
+        color: black;
+        font-size: 16px;
+        font-family: sans-serif;
+        padding: 10px 16px;
+      }
+
+      .next {
+        background-color: #4caf50;
+        color: white;
+        font-size: 16px;
+        font-family: sans-serif;
+        padding: 10px 16px;
+      }
+
+      .round {
+        border-radius: 50%;
+      }
+    </style>
   </head>
   <body>
     <button id="open-button" class="next" margin-bottom="25px">
